--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      div{
+        font-size: 32px; 
+        font-weight: bold; 
+        text-align: center; 
+      }
+    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- EXTERNAL METHOD -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
