--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      div{
-        font-size: 32px; 
-        font-weight: bold; 
-        text-align: center; 
+
+    <style> 
+      p {
+        color: white;
+        background-color: green;
+        font-size: 18px;
       }
+
     </style>
     <link rel="stylesheet" href="styles.css"> <!-- EXTERNAL METHOD -->
 
@@ -18,6 +20,8 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button 
+    style=" background-color: orange";
+     >Inline Method</button>
   </body>
 </html>
